# Homework_Django

./: .gitignore  README.md  catalog.json  category.json  product.json  pyproject.toml  requirements.txt
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: base.html  blogpost_confirm_delete.html  blogpost_detail.html  blogpost_form.html  blogpost_list.html  blogpost_update.html  header.html
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/management/commands/: add_products.py
catalog/migrations/: 0001_initial.py
catalog/templates/: base.html  contacts.html  header.html  home.html  product_detail.html  products_list.html
catalog/templates/catalog/: base.html  contacts.html  header.html  product_confirm_delete.html  product_create.html  product_detail.html  products_list.html
catalog/templates/includes/: inc_menu.html
catalog/templatetags/: my_tags.py
config/: settings.py
